manifests/auth-provider/overlays/production/patches/backend-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-redis-deployment
spec:
  template:
    spec:
      containers:
        - name: backend-redis
          resources:
            limits:
              cpu: "300m"
              memory: "500Mi"
