manifests/auth-provider/overlays/production/patches/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  tls:
    - hosts:
        - auth-provider.kuroweb.net
        - www.auth-provider.kuroweb.net
      secretName: ingress-cert
  rules:
    - host: auth-provider.kuroweb.net
